--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
 	},
 	"ConnectionStrings": {
 		"DefaultConnection": "Data source=datingapp.db"
-	}
+	},
+	"TokenKey": "this is the super secret token key"
 }
