--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
 		}
 	},
 	"ConnectionStrings": {
-		"DefaultConnection": "Data source=datingapp.db"
+		"DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=password; Database=datingapp"
 	},
 	"TokenKey": "this is the super secret token key"
 }
